--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ version = "0.8"
 optional = true
 
 [dependencies.printpdf]
-version = "0.3.4"
+git = "https://github.com/msrd0/printpdf"
 default-features = false
 
 [dependencies.derive_more]
